--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^3.1.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.11.5"
+    "pg": "^8.11.5",
+    "query-string": "^9.0.0"
   }
 }
